--- a/todo/src/Todo.css
+++ b/todo/src/Todo.css
@@ -1,8 +1,28 @@
 .container{
   margin: auto;
-  max-width: 900px;
+  max-width: 600px;
 }
 
 .done{
   text-decoration: line-through;
+}
+
+ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.item{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  margin-top: 15px;
+  font-size: 30px;
+}
+
+.card{
+  box-shadow: 0 2px 7px 1px rgba(0,0,0,0.2);
 }
